@@ -35,6 +35,7 @@ import org.scijava.ui.behaviour.Behaviour;
 import org.scijava.ui.behaviour.ClickBehaviour;
 import sc.iview.SciView;
 import javax.swing.JFrame;
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.BiConsumer;
 
@@ -151,7 +152,7 @@ public class SciviewBridge {
 
 		//add "root" with data axes
 		this.axesParent = addDataAxes();
-		sciviewWin.addChild( axesParent );
+		sciviewWin.addNode( axesParent );
 
 		//get necessary metadata - from image data
 		SOURCE_ID = sourceID;
@@ -200,7 +201,7 @@ public class SciviewBridge {
 		blueVolChannelNode = sciviewWin.addVolume(blueVolChannelImg, "BLUE VOL"+commonNodeName, new float[] {1,1,1});
 		adjustAndPlaceVolumeIntoTheScene(blueVolChannelNode, "Blue.lut", volumeScale, INTENSITY_RANGE_MIN, INTENSITY_RANGE_MAX);
 		//
-		volNodes = List.of(redVolChannelNode,greenVolChannelNode,blueVolChannelNode);
+		volNodes = Arrays.asList(redVolChannelNode,greenVolChannelNode,blueVolChannelNode);
 
 		final int converterSetupID = SOURCE_ID < redVolChannelNode.getConverterSetups().size() ? SOURCE_ID : 0;
 		//setup intensity display listeners that keep the ranges of the three volumes in sync
@@ -250,6 +251,43 @@ public class SciviewBridge {
 		//add the sciview-side displaying handler for the spots
 		this.sphereNodes = new SphereNodes(this.sciviewWin, sphereParent);
 		sphereNodes.showTheseSpots(mastodonWin.getAppModel(), 0, noTScolorizer);
+
+		//temporary handlers, originally for testing....
+		registerKeyboardHandlers();
+	}
+
+	public void close() {
+		detachControllingUI();
+		deregisterKeyboardHandlers();
+		System.out.println("Mastodon-sciview Bridge closing procedure: UI and keyboards handlers are removed now");
+
+		sciviewWin.setActiveNode(axesParent);
+		System.out.println("Mastodon-sciview Bridge closing procedure: focus shifted away from our nodes");
+
+		//first make invisible, then remove...
+		setVisibilityOfVolume(false);
+		setVisibilityOfSpots(false);
+		System.out.println("Mastodon-sciview Bridge closing procedure: our nodes made hidden");
+
+		final long graceTimeForVolumeUpdatingInMS = 100;
+		try {
+			sciviewWin.deleteNode(redVolChannelNode, true);
+			System.out.println("Mastodon-sciview Bridge closing procedure: red volume removed");
+			Thread.sleep(graceTimeForVolumeUpdatingInMS);
+
+			sciviewWin.deleteNode(greenVolChannelNode, true);
+			System.out.println("Mastodon-sciview Bridge closing procedure: green volume removed");
+			Thread.sleep(graceTimeForVolumeUpdatingInMS);
+
+			sciviewWin.deleteNode(blueVolChannelNode, true);
+			System.out.println("Mastodon-sciview Bridge closing procedure: blue volume removed");
+			Thread.sleep(graceTimeForVolumeUpdatingInMS);
+
+			sciviewWin.deleteNode(sphereParent, true);
+			System.out.println("Mastodon-sciview Bridge closing procedure: spots were removed");
+		} catch (InterruptedException e) { /* do nothing */ }
+
+		sciviewWin.deleteNode(axesParent, true);
 	}
 
 	private void adjustAndPlaceVolumeIntoTheScene(final Volume v,
@@ -295,6 +333,9 @@ public class SciviewBridge {
 						, INTENSITY_GAMMA) )
 			:
 				(src, tgt) -> tgt.setReal( Math.min(INTENSITY_CONTRAST*src.getRealFloat() +INTENSITY_SHIFT, INTENSITY_CLAMP_AT_TOP) );
+
+		if (srcImg == null) System.out.println("freshNewWhiteContent(): srcImg is null !!!");
+		if (redCh == null) System.out.println("freshNewWhiteContent(): redCh is null !!!");
 		//
 		//massage input data into the red channel
 		LoopBuilder.setImages(srcImg,redCh)
@@ -451,8 +492,6 @@ public class SciviewBridge {
 				mastodonWin.getAppModel(),
 				bdvWin);
 
-		//temporary handlers mostly for testing
-		keyboardHandlersForTestingForNow(bdvWinParamsProvider);
 		return bdvWin;
 	}
 
@@ -630,7 +669,23 @@ public class SciviewBridge {
 	}
 
 	// --------------------------------------------------------------------------
-	private void keyboardHandlersForTestingForNow(final DPP_BdvAdapter forThisBdv) {
+	public static final String key_DEC_SPH = "O";
+	public static final String key_INC_SPH = "shift O";
+	public static final String key_COLORING = "G";
+	public static final String key_CLRNG_AUTO = "shift G";
+	public static final String key_CLRNG_ONOFF = "ctrl G";
+	public static final String key_CTRL_WIN = "ctrl I";
+	public static final String key_CTRL_INFO = "shift I";
+
+	public static final String desc_DEC_SPH = "decrease_initial_spheres_size";
+	public static final String desc_INC_SPH = "increase_initial_spheres_size";
+	public static final String desc_COLORING = "recolor_volume_now";
+	public static final String desc_CLRNG_AUTO = "recolor_automatically";
+	public static final String desc_CLRNG_ONOFF = "recolor_enabled";
+	public static final String desc_CTRL_WIN = "controlling_window";
+	public static final String desc_CTRL_INFO = "controlling_info";
+
+	private void registerKeyboardHandlers() {
 		//handlers
 		final Behaviour clk_DEC_SPH = (ClickBehaviour) (x, y) -> {
 			sphereNodes.decreaseSphereScale();
@@ -641,7 +696,7 @@ public class SciviewBridge {
 			updateUI();
 		};
 		final Behaviour clk_COLORING = (ClickBehaviour) (x, y) -> {
-			updateSciviewColoringNow(forThisBdv);
+			updateSciviewColoringNow();
 			updateUI();
 		};
 		final Behaviour clk_CLRNG_AUTO = (ClickBehaviour) (x, y) -> {
@@ -655,55 +710,55 @@ public class SciviewBridge {
 			updateUI();
 		};
 
-		final Behaviour clk_CTRL_WIN = (ClickBehaviour) (x,y) -> this.createAndShowControllingUI();
-		final Behaviour clk_CTRL_INFO = (ClickBehaviour) (x,y) -> {
-			/*
-			this.sciviewWin.getSceneryInputHandler()
-				.getAllBindings().forEach((t,a) ->
-						System.out.println("registered keys >>"
-								+ t.toString()
-								+ "<< do actions: "
-								+ a.stream().reduce("",(s1,s2)->s1+","+s2)) );
-			*/
-			System.out.println(this);
-		};
+		final Behaviour clk_CTRL_WIN = (ClickBehaviour) (x, y) -> this.createAndShowControllingUI();
+		final Behaviour clk_CTRL_INFO = (ClickBehaviour) (x, y) -> System.out.println(this);
 
 		//register them
 		final InputHandler handler = sciviewWin.getSceneryInputHandler();
-		handler.addKeyBinding("decrease_initial_spheres_size", "O");
-		handler.addBehaviour("decrease_initial_spheres_size", clk_DEC_SPH);
-		handler.addKeyBinding("increase_initial_spheres_size", "shift O");
-		handler.addBehaviour("increase_initial_spheres_size", clk_INC_SPH);
-		handler.addKeyBinding("recolor_volume_now", "G");
-		handler.addBehaviour("recolor_volume_now", clk_COLORING);
-		handler.addKeyBinding("recolor_automatically", "shift G");
-		handler.addBehaviour("recolor_automatically", clk_CLRNG_AUTO);
-		handler.addKeyBinding("recolor_enabled", "ctrl G");
-		handler.addBehaviour("recolor_enabled", clk_CLRNG_ONOFF);
+		handler.addKeyBinding(desc_DEC_SPH, key_DEC_SPH);
+		handler.addBehaviour( desc_DEC_SPH, clk_DEC_SPH);
+		//
+		handler.addKeyBinding(desc_INC_SPH, key_INC_SPH);
+		handler.addBehaviour( desc_INC_SPH, clk_INC_SPH);
+		//
+		handler.addKeyBinding(desc_COLORING, key_COLORING);
+		handler.addBehaviour( desc_COLORING, clk_COLORING);
+		//
+		handler.addKeyBinding(desc_CLRNG_AUTO, key_CLRNG_AUTO);
+		handler.addBehaviour( desc_CLRNG_AUTO, clk_CLRNG_AUTO);
+		//
+		handler.addKeyBinding(key_CLRNG_ONOFF, key_CLRNG_ONOFF);
+		handler.addBehaviour( key_CLRNG_ONOFF, clk_CLRNG_ONOFF);
+		//
+		handler.addKeyBinding(desc_CTRL_WIN, key_CTRL_WIN);
+		handler.addBehaviour( desc_CTRL_WIN, clk_CTRL_WIN);
+		//
+		handler.addKeyBinding(desc_CTRL_INFO, key_CTRL_INFO);
+		handler.addBehaviour( desc_CTRL_INFO, clk_CTRL_INFO);
+	}
 
-		handler.addKeyBinding("controlling_window", "ctrl I");
-		handler.addBehaviour("controlling_window", clk_CTRL_WIN);
-		handler.addKeyBinding("controlling_info", "shift I");
-		handler.addBehaviour("controlling_info", clk_CTRL_INFO);
-
-		//deregister them when they are due
-		forThisBdv.ofThisBdv.onClose(() -> {
-			handler.removeKeyBinding("decrease_initial_spheres_size");
-			handler.removeBehaviour("decrease_initial_spheres_size");
-			handler.removeKeyBinding("increase_initial_spheres_size");
-			handler.removeBehaviour("increase_initial_spheres_size");
-			handler.removeKeyBinding("recolor_volume_now");
-			handler.removeBehaviour("recolor_volume_now");
-			handler.removeKeyBinding("recolor_automatically");
-			handler.removeBehaviour("recolor_automatically");
-			handler.removeKeyBinding("recolor_enabled");
-			handler.removeBehaviour("recolor_enabled");
-
-			handler.removeKeyBinding("controlling_window");
-			handler.removeBehaviour("controlling_window");
-			handler.removeKeyBinding("controlling_info");
-			handler.removeBehaviour("controlling_info");
-		});
+	private void deregisterKeyboardHandlers() {
+		final InputHandler handler = sciviewWin.getSceneryInputHandler();
+		handler.removeKeyBinding(desc_DEC_SPH);
+		handler.removeBehaviour( desc_DEC_SPH);
+		//
+		handler.removeKeyBinding(desc_INC_SPH);
+		handler.removeBehaviour( desc_INC_SPH);
+		//
+		handler.removeKeyBinding(desc_COLORING);
+		handler.removeBehaviour( desc_COLORING);
+		//
+		handler.removeKeyBinding(desc_CLRNG_AUTO);
+		handler.removeBehaviour( desc_CLRNG_AUTO);
+		//
+		handler.removeKeyBinding(key_CLRNG_ONOFF);
+		handler.removeBehaviour( key_CLRNG_ONOFF);
+		//
+		handler.removeKeyBinding(desc_CTRL_WIN);
+		handler.removeBehaviour( desc_CTRL_WIN);
+		//
+		handler.removeKeyBinding(desc_CTRL_INFO);
+		handler.removeBehaviour( desc_CTRL_INFO);
 	}
 
 	public JFrame createAndShowControllingUI() {
